# seiseki

./: .env.example  .gitignore  .railwayignore  CLAUDE.md  DEPLOYMENT.md  Procfile  QR_POINTS_FIX_SUMMARY.md  README.md  create_admin.py  create_test_users.py  db.sqlite3  generate_secret_key.py  nixpacks.toml  pyproject.toml  requirements.txt  test_login.py
school_management/: admin.py  apps.py  models.py  urls.py  views.py
school_management/migrations/: 0001_initial.py  0002_group_group_name.py  0003_contributionevaluation_comment.py  0004_group_peer_evaluation_deadline.py  0005_remove_contributionevaluation_comment_and_more.py  0006_question_questionchoice.py  0007_customuser_furigana.py  0008_add_furigana_and_points.py  0009_studentqrcode_qrcodescan.py  0010_studentlessonpoints_qrcodescan_lesson_session.py  0011_studentclasspoints.py  0012_alter_qrcodescan_unique_together.py  0013_alter_customuser_email.py  0014_studentclasspoints_attendance_rate.py  0015_studentclasspoints_attendance_points.py
school_management/templates/school_management/: admin_teacher_management.html  base.html  bulk_student_add.html  class_create.html  class_detail.html  class_detail_test.html  class_evaluation.html  class_list.html  class_points.html  class_qr_codes.html  class_student_detail.html  class_student_select.html  dashboard.html  group_delete.html  (+38 more)
school_management/templatetags/: evaluation_filters.py
school_management/tests/: test_dashboard.py  test_points.py
school_project/: settings.py  urls.py  wsgi.py
scripts/: create_admin.py  fetch_home.py  test_update_points.py
(+4 files in other folders)
