[project]
name = "school-system"
version = "0.1.0"
description = "School Management System with Django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["school_project", "school_management"]
