[project]
name = "school-system"
version = "0.1.0"
description = "School Management System with Django"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.5",
    "qrcode[pil]>=8.2",
    "gunicorn>=21.2.0",
    "psycopg2-binary>=2.9.9",
    "whitenoise>=6.6.0",
    "python-dotenv>=1.0.0",
    "dj-database-url>=2.1.0",
]
